<resources>
    <string name="app_name">DouYin</string>
    <string name="title_home">首页</string>
    <string name="title_friends">朋友</string>
    <string name="title_notifications">消息</string>
    <string name="title_me">我</string>
    <string name="live">直播</string>
    <string name="post">发布</string>
    <string name="search">搜索</string>
    <string name="same_city">同城</string>
    <string name="follow">关注</string>
    <string name="recommend">推荐</string>
    <string name="ad_blocked">已屏蔽买卖广告</string>
    <string name="thumb">点赞</string>
    <string name="comment">评论</string>
    <string name="forward">转发</string>
    <string name="time_reminder">时间提醒</string>
    <string name="no_more">没有更多视频</string>
    <string name="have_a_rest_before_returning">休息一下再来看吧</string>
    <string name="have_a_rest">休息一下</string>
    <string name="i_want_more">再看一会</string>
    <string name="reminder_title_1">眼睛说我有点累啦～</string>
    <string name="reminder_subtitle_1">已持续观看59分钟</string>
    <string name="reminder_title_2">手机外也有美好生活</string>
    <string name="reminder_subtitle_2">预设时间已到</string>
    <string name="back">返回</string>
    <string name="guess">猜你想搜:</string>
    <string name="guess_1">亚马逊跨境电商</string>
    <string name="guess_2">徐勤根被央媒怒批</string>
    <string name="guess_3">河南迎来新一轮大暴雨</string>
    <string name="guess_4">蜜雪冰城被罚9万元</string>
    <string name="guess_5">央视批审丑流量</string>
    <string name="guess_6">郑州市恢复新冠疫情不知道省略了什么</string>
    <string name="hot">抖音热榜:</string>
    <string name="voice_search_hint">点击上方语音搜索</string>
    <string name="voice_search">语音搜索</string>
    <string name="more_live">更多直播</string>
    <string name="live_owner">主播</string>
    <string name="live_audiences">观众</string>
    <string name="live_hour">小时榜</string>
    <string name="say_something">说点什么</string>
    <string name="more">更多</string>
    <string name="live_messages">弹幕</string>
    <string name="live_buy">购物</string>
    <string name="live_gift">礼物</string>
    <string name="live_like">喜欢</string>
    <string name="sample_username">用户111115021340934</string>
    <string name="sample_user_id">抖音号 : 33855555</string>
    <string name="qr_code">二维码</string>
    <string name="bio">你还没有填写个人简介，点击添加</string>
    <string name="brief_information">个人信息</string>
    <string name="cart">抖音商城</string>
    <string name="cart_detail">发现超值好物</string>
    <string name="music">我的音乐</string>
    <string name="music_detail">已收藏 136 首</string>
    <string name="edit_profile">编辑资料</string>
    <string name="profile_completeness">85%</string>
    <string name="add_friend">添加朋友</string>
    <string name="health_guard">健康卫士</string>
    <string name="works">作品</string>
    <string name="proprietary">私密</string>
    <string name="like">喜欢</string>
    <string name="favorite">收藏</string>
    <string name="title_verification">实名认证</string>
    <string name="hint_verification">完成认证后将通过人脸识别登录</string>
    <string name="verification_action">开始实名认证</string>
    <string name="avatar">头像</string>
    <string name="configuration">防沉迷设置</string>
    <string name="configure_time">时间设置</string>
    <string name="configure_fraud">防诈骗设置</string>
    <string name="configure_video">短视频观看</string>
    <string name="configure_video_single_max">单次观看最长时间:</string>
    <string name="default_video_single_max">15 分钟</string>
    <string name="video_single_max_1">30 分钟</string>
    <string name="video_single_max_2">45 分钟</string>
    <string name="video_single_max_3">60 分钟</string>
    <string name="configure_video_total_max">累计最长时间:</string>
    <string name="default_video_total_max">60 分钟</string>
    <string name="video_total_max_1">90 分钟</string>
    <string name="video_total_max_2">120 分钟</string>
    <string name="video_total_max_3">150 分钟</string>
    <string name="video_total_max_4">180 分钟</string>
    <string name="configure_rest_time">每次休息时间:</string>
    <string name="default_rest_time">10 分钟</string>
    <string name="rest_time_1">20 分钟</string>
    <string name="rest_time_2">30 分钟</string>
    <string name="configure_live">直播观看</string>
    <string name="configure_live_total_max">观看总时长:</string>
    <string name="default_live_total_max">60 分钟</string>
    <string name="live_total_max_1">90 分钟</string>
    <string name="live_total_max_2">120 分钟</string>
    <string name="live_total_max_3">150 分钟</string>
    <string name="live_total_max_4">180 分钟</string>
    <string name="configure_video_donate_max">最大打赏额度:</string>
    <string name="default_donate_max">999</string>
    <string name="yuan">元</string>
    <string name="configure_video_block_sales">屏蔽卖货:</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="start_healthy_mode">开启防沉迷模式</string>
    <string name="health_report">健康数据报告</string>
    <string name="my_exchange">我的兑换</string>
    <string name="health_subtitle">8月31日两小时浏览时间记录（单位：分钟）</string>
    <string name="health_half_year">近6个月浏览时间记录（单位：分钟）</string>
    <string name="watch_video">浏览短视频</string>
    <string name="watch_live">观看直播</string>
    <string name="report_analysis">分析报告</string>
    <string name="minute">min</string>
    <string name="sample_date">8月31日</string>
    <string name="sample_watch_video_time">176</string>
    <string name="less_than_preset">小于预设时间</string>
    <string name="sample_watch_video_diff">4</string>
    <string name="sample_watch_live_time">237</string>
    <string name="more_than_preset">超过预设时间</string>
    <string name="sample_watch_live_diff">57</string>
    <string name="coin_today">今日金币数量：0</string>
    <string name="collect_coins">金币领取</string>
    <string name="collect_all">一键领取</string>
    <string name="exchange_shop">兑换商城</string>
    <string name="coupon">优惠券</string>
    <string name="coin_reward">奖励金币</string>
    <string name="need_coin">消耗金币</string>
    <string name="exchange">兑换</string>
    <string name="collected">已领取</string>
    <string name="uncollected">未领取</string>
</resources>