<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.unidy2002.douyin.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_me"
            android:name="com.unidy2002.douyin.ui.me.MeFragment"
            android:label="@string/title_me"
            tools:layout="@layout/fragment_me"/>

    <fragment
            android:id="@+id/navigation_health"
            android:name="com.unidy2002.douyin.ui.me.HealthFragment"
            android:label="@string/health_guard"
            tools:layout="@layout/fragment_health"/>

    <fragment
            android:id="@+id/navigation_exchange"
            android:name="com.unidy2002.douyin.ui.me.ExchangeFragment"
            android:label="@string/exchange_shop"
            tools:layout="@layout/fragment_exchange"/>
</navigation>