<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.login.ConfigurationFragment"
        android:layout_marginHorizontal="24dp">

    <ImageView
            android:id="@+id/configuration_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/configuration"
            android:src="@drawable/configuration_header"
            android:paddingVertical="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/configuration_header"
            android:text="@string/configuration"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="28sp"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/configuration_header"
            app:layout_constraintBottom_toTopOf="@id/verification_action_button">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/configuration_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_time"
                    android:layout_marginTop="30dp"
                    android:textSize="20sp"
                    android:textColor="@color/grey"/>

            <View
                    android:id="@+id/configuration_time_split"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/light_grey"
                    android:layout_marginTop="6dp"/>

            <LinearLayout
                    android:id="@+id/configuration_time_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/configure_video"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/configure_video_single_max"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/configure_video_total_max"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/configure_rest_time"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/configure_live"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginTop="12dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/configure_live_total_max"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/configuration_fraud_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_fraud"
                    android:layout_marginTop="12dp"
                    android:textSize="20sp"
                    android:textColor="@color/grey"/>

            <View
                    android:id="@+id/configuration_fraud_split"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/light_grey"
                    android:layout_marginTop="6dp"/>

            <LinearLayout
                    android:id="@+id/configuration_fraud_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/configure_video_donate_max"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/configure_video_block_sales"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
            android:id="@+id/verification_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_action"
            android:background="@color/red"
            android:padding="6dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>