<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="14dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="12dp">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:text="@string/guess_1"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="6dp"
                    android:textSize="21sp"
                    android:singleLine="true"
                    android:ellipsize="end"/>

            <TextView
                    android:text="@string/guess_3"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="6dp"
                    android:textSize="21sp"
                    android:singleLine="true"
                    android:ellipsize="end"/>

            <TextView
                    android:text="@string/guess_5"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="6dp"
                    android:textSize="21sp"
                    android:singleLine="true"
                    android:ellipsize="end"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:text="@string/guess_2"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="4dp"
                    android:textSize="21sp"
                    android:singleLine="true"
                    android:ellipsize="end"/>

            <TextView
                    android:text="@string/guess_4"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="4dp"
                    android:textSize="21sp"
                    android:singleLine="true"
                    android:ellipsize="end"/>

            <TextView
                    android:text="@string/guess_6"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="4dp"
                    android:textSize="21sp"
                    android:singleLine="true"
                    android:ellipsize="end"/>
        </LinearLayout>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/light_grey"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot"
            android:textSize="31sp"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"/>

</LinearLayout>