<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.me.MeFragment"
        android:background="@color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_username"
                android:textSize="24sp"
                android:textColor="@color/black"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_user_id"
                    android:textColor="@color/black"/>

            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/me_qr_code"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/qr_code"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="9dp"
                android:background="@color/light_grey"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>

        <ImageView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/brief_information"
                android:contentDescription="@string/brief_information"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp">

            <ImageView
                    android:id="@+id/me_cart_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/cart"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/cart"/>

            <TextView
                    android:id="@+id/me_cart_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@id/me_cart_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="6dp"/>

            <TextView
                    android:id="@+id/me_cart_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_detail"
                    android:textColor="@color/grey"
                    app:layout_constraintLeft_toRightOf="@id/me_cart_image"
                    app:layout_constraintTop_toBottomOf="@id/me_cart_title"
                    android:layout_marginHorizontal="6dp"
                    android:layout_marginTop="4dp"/>

            <ImageView
                    android:id="@+id/me_music_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/music"
                    android:layout_marginStart="28dp"
                    app:layout_constraintLeft_toRightOf="@id/me_cart_detail"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/cart"/>

            <TextView
                    android:id="@+id/me_music_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@id/me_music_image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="6dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music_detail"
                    android:textColor="@color/grey"
                    app:layout_constraintLeft_toRightOf="@id/me_music_image"
                    app:layout_constraintTop_toBottomOf="@id/me_music_title"
                    android:layout_marginHorizontal="6dp"
                    android:layout_marginTop="4dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                    android:id="@+id/me_icon_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:gravity="center"
                    android:background="@drawable/grey_button_background">

                <TextView
                        android:id="@+id/me_edit_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/edit_profile"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:layout_marginStart="4dp"
                        android:text="@string/profile_completeness"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/me_icon_middle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/grey_button_background">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/add_friend"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/me_icon_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/health_guard"
                    android:background="@drawable/grey_button_background"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/works"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="6dp"
                android:gravity="center"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/proprietary"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:padding="6dp"
                android:gravity="center"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/like"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:padding="6dp"
                android:gravity="center"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:padding="6dp"
                android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="@color/black"/>

        <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_weight="3"
                android:background="@color/light_grey"/>
    </LinearLayout>
</LinearLayout>