<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/video_slide_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:gravity="center">

        <ImageView
                android:id="@+id/home_live_button"
                android:layout_width="28dp"
                android:layout_height="30dp"
                android:src="@drawable/home_live_icon"
                android:contentDescription="@string/live"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="16dp"/>

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingHorizontal="5dp"
                android:paddingTop="4dp"
                android:text="@string/same_city"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:paddingBottom="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingHorizontal="5dp"
                android:paddingTop="4dp"
                android:text="@string/follow"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:paddingBottom="5dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingHorizontal="5dp"
                android:paddingTop="4dp"
                android:text="@string/recommend"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:background="@drawable/home_top_selected_background"
                android:paddingBottom="5dp"/>

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>


        <ImageView
                android:id="@+id/home_search_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/home_search_icon"
                android:contentDescription="@string/search"
                android:layout_marginHorizontal="9dp"
                android:layout_marginVertical="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>