<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.unidy2002.douyin.ui.home.JzvdHomePlayer
            android:id="@+id/video_slide_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <LinearLayout
            android:id="@+id/video_action_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:gravity="center">

        <ImageView
                android:layout_width="36dp"
                android:layout_height="50dp"
                android:src="@drawable/video_like_icon"
                android:contentDescription="@string/like"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"/>

        <ImageView
                android:layout_width="38dp"
                android:layout_height="51dp"
                android:src="@drawable/video_comment_icon"
                android:contentDescription="@string/comment"
                android:layout_marginHorizontal="19dp"
                android:layout_marginVertical="5dp"/>

        <ImageView
                android:layout_width="35dp"
                android:layout_height="41dp"
                android:src="@drawable/video_forward_icon"
                android:contentDescription="@string/forward"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"/>
    </LinearLayout>

    <TextView
            android:id="@+id/video_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/video_action_group"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>